plugins {
  id 'application'
  id 'jvm-test-suite'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

application {
  mainClass = 'org.victorrobotics.devilscoutserver.Server'
}

repositories {
  mavenCentral()
}

dependencies {
  implementation 'io.javalin:javalin:5.6.3'
  implementation 'io.javalin.community.openapi:javalin-openapi-plugin:5.6.3'
  implementation 'io.javalin.community.openapi:javalin-swagger-plugin:5.6.3'

  implementation 'org.slf4j:slf4j-simple:2.0.7'
  implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.3'

  implementation 'com.impossibl.pgjdbc-ng:pgjdbc-ng:0.8.9'
  implementation 'com.zaxxer:HikariCP:5.1.0'

  implementation 'org.victorrobotics.bluealliance:blue-alliance-api:2023-beta-2'

  annotationProcessor 'io.javalin.community.openapi:openapi-annotation-processor:5.6.3'

  testImplementation 'org.mockito:mockito-core:5.7.0'
  testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
}

testing {
  suites {
    test {
      useJUnitJupiter()
    }
  }
}

jar {
  manifest {
    attributes 'Main-Class': application.mainClass
  }

  from {
    configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  }
}

tasks.withType(Tar) {
   duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

tasks.withType(Zip) {
   duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
